welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	if(estFaceMur()==true){
			return false ;
	}
		    if(getCouleurSol()==Color.Green){
			avance();
			return true 
		}
		
		}
	
